[package]
name = "kernel-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
ps4k = { path = "ps4k" }
x86_64 = { version = "0.15.1", features = ["instructions"], default-features = false }

[target.'cfg(fw = "1100")'.dependencies]
ps4k-1100 = { path = "ps4k-1100" }

[profile.release]
opt-level = "z"

[workspace]
members = ["ps4k", "ps4k-1100"]
