[package]
name = "kernel-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
korbis = { path = "korbis" }
x86_64 = { version = "0.15.1", features = ["instructions"], default-features = false }

[target.'cfg(fw = "1100")'.dependencies]
korbis-1100 = { path = "korbis-1100" }

[profile.release]
opt-level = "z"

[workspace]
members = ["korbis", "korbis-1100", "korbis-macros"]
