[package]
name = "kernel-dumper"
version = "0.1.0"
edition = "2021"

[features]
patch-copyin = []

[dependencies]
okf = { git = "https://github.com/obhq/kernel-framework.git" }
x86_64 = { version = "0.15.1", features = ["instructions"], default-features = false }

[target.'cfg(fw = "1100")'.dependencies]
kernel = { package = "ps4-1100", git = "https://github.com/obhq/kernel-framework.git" }

[target.'cfg(fw = "1152")'.dependencies]
kernel = { package = "ps4-1152", git = "https://github.com/obhq/kernel-framework.git" }

[profile.release]
opt-level = "z"
